--- a/debian-buster-slim/Dockerfile
+++ b/debian-buster-slim/Dockerfile
@@ -5,6 +5,7 @@ ENV DHT_PORT=49160
 ENV INCOMING_PORT=49161-49161
 ENV USR_ID=1000
 ENV GRP_ID=1000
+ENV SCGI_PORT=5000
 ENV PHP_MEM=256M
 ENV HTTP_PORT=80
 ENV HTTPS_PORT=443
